[package]
name = "moist"
version = "0.1.0"
authors = ["Andrey Cherkashin <with.out@me.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-sysroot]
target = "x86_64-beastiekit-freebsd-kernel.json" # This is relative to Cargo.toml

[dependencies]
bk_allocator = "0.1.0"
bk_primitives = "0.1.0"
hashbrown = "0.6.0"


#[dependencies.core]
#path = "/usr/home/andoriyu/.rustup/toolchains/1.35.0-x86_64-unknown-freebsd/lib/rustlib/src/rust/src/libcore"

#[dependencies.compiler_builtins]
#version = "0.1.0"
#features = ["core", "mem"]

#[dependencies.alloc]
#path = "/usr/home/andoriyu/.rustup/toolchains/1.35.0-x86_64-unknown-freebsd/lib/rustlib/src/rust/src/liballoc"


#[patch.crates-io.rustc-std-workspace-core]
#path = "/usr/home/andoriyu/.rustup/toolchains/1.35.0-x86_64-unknown-freebsd/lib/rustlib/src/rust/src/tools/rustc-std-workspace-core"

